Add live links and description paragraphs

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -1,12 +1,24 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>LANDING PORTFOLIO.</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <h1>Ancel Duncan Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
+    <p>This is a list of <strong>projects</strong> I've created;</p>
+      <ul>
+        <li><a href="https://github.com/Ancel-Ajanga/my-first-website">First Website.<a/>.</li>
+        <li><a href="https://github.com/Ancel-Ajanga/my-favorite-things">Favorite Things.</a>.</li>
+        <li><a href="https://github.com/Ancel-Ajanga/hello-world">Hello World.</a></li>
+        </ul>
+        <h2>Description of the project and language it uses.</h2>
+        <p>The first link is a link to my first website which was crreated under Moringa School with the guide of tms.</p> 
+        <h3>ABOUT ME SECTION</h3>
+        <p>
+
   </body>
 
 </html>
