--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -15,9 +15,24 @@
         <li><a href="https://github.com/Ancel-Ajanga/hello-world">Hello World.</a></li>
         </ul>
         <h2>Description of the project and language it uses.</h2>
-        <p>The first link is a link to my first website which was crreated under Moringa School with the guide of tms.</p> 
+        <p>The first link is a link to my first website which was created under Moringa School with the guide of tms.</p>
+        <p>The second link is a link to my favorite things which contains some of the things that I love and all that. I mean the title favorite things says it all!</p>
+        <p>The third link is my hello world page. Basically it has demonstrations of the things that i've been learning through the week.</p>
         <h3>ABOUT ME SECTION</h3>
-        <p>
+        <p>I'm Duncan Lewis. I went to St Peters Academy Narok for my junior education. I passed my final exams at junior level and proceeded to Kakamega High School.
+          I did my form 4 final examinations and passed and proceeded to pursue Software engineering at University Of Nairobi Chiromo campus.
+          I decided to take software development to develop my skills and knowledge to get into the Tech world which is my passion.
+          My current interests are in programming, photography and film production.</p>
+          <p>My <strong>hobbies</strong> are;</p>
+          <ol>
+            <li>travelling,</li>
+            <li>swimming,</li>
+            <li>exploring,</li>
+            <li>hiking,</li>
+            <li>reading novels</li>
+            <li>watching movies.</li>
+            </ol>
+
 
   </body>
 
