Add class elements

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -6,9 +6,9 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Ancel Duncan Lewis Ajanga</h1>
+    <h1 class="Duncan Lewis">Ancel Duncan Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
-    <p>This is a list of <strong>projects</strong> I've created;</p>
+    <p class="intro">This is a list of <strong>projects</strong> I've created;</p>
       <ul>
         <li><a href="https://github.com/Ancel-Ajanga/my-first-website">First Website.<a/>.</li>
         <li><a href="https://github.com/Ancel-Ajanga/my-favorite-things">Favorite Things.</a>.</li>
