--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1 class="Duncan Lewis">Ancel Duncan Lewis Ajanga</h1>
+    <h1 class="Duncan">Ancel Duncan Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
     <p class="intro">This is a list of <strong>projects</strong> I've created;</p>
       <ul>
