Add divs and classes elements

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -6,6 +6,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="about me">
+      <div class="dun">
     <h1 class="Duncan">Ancel Duncan Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
     <p class="intro">This is a list of <strong>projects</strong> I've created;</p>
@@ -23,6 +25,10 @@
           I did my form 4 final examinations and passed and proceeded to pursue <em>Software engineering</em> at University Of Nairobi Chiromo campus.
           I decided to take software development to <strong>develop my skills and knowledge</strong> to get into the <strong>Tech world</strong> which is my passion.
           My current interests are in programming, photography and film production.</p>
+          </div>
+          </div>
+          <div class="black">
+            <div class="My hobbies">
           <p>My <strong>hobbies</strong> are;</p>
           <ol>
             <li>travelling</li>
@@ -32,7 +38,8 @@
             <li>reading novels</li>
             <li>watching movies.</li>
             </ol>
-
+            </div>
+            </div>
 
   </body>
 
