Add css changes and readme changes

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -8,7 +8,7 @@
   <body>
     <div class="about me">
       <div class="dun">
-    <h1 class="Duncan">Ancel Duncan Lewis Ajanga</h1>
+    <h1 class="Duncan">Ancel Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
     <p class="intro">This is a list of <strong>projects</strong> I've created;</p>
       <ul>
