--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -2,13 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LANDING PORTFOLIO.</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="about me">
+      <div class="photo">
+        <img src="images/bugatti.jpg" alt="">
       <div class="dun">
-    <h1 class="Duncan">Ancel Lewis Ajanga</h1>
+    <h1>Ancel Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
     <p class="intro">This is a list of <strong>projects</strong> I've created;</p>
       <ul>
@@ -16,6 +20,7 @@
         <li><a href="https://github.com/Ancel-Ajanga/my-favorite-things">Favorite Things.</a>.</li>
         <li><a href="https://github.com/Ancel-Ajanga/hello-world">Hello World.</a></li>
         </ul>
+        <p> Here is the live link to my page;</p>
         <h2>Description of the project and language it uses.</h2>
         <p>The first link is a link to my first website which was created under Moringa School with the guide of tms.</p>
         <p>The second link is a link to my favorite things which contains some of the things that I love and all that. I mean the title favorite things says it all!</p>
