--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -7,10 +7,9 @@
     <title>LANDING PORTFOLIO.</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body background="images/oceans.jpg">
     <div class="about me">
       <div class="photo">
-        <img src="images/bugatti.jpg" alt="">
       <div class="dun">
     <h1>Ancel Lewis Ajanga</h1>
     <img src="images/eagle.jpg" alt="A photo of an eagle">
