--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LANDING PORTFOLIO.</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   </head>
-  <body background="images/oceans.jpg">
+  <body background="images/web.jpg">
+    <div class="jumbotron">
     <div class="about me">
       <div class="photo">
       <div class="dun">
@@ -25,10 +26,11 @@
         <p>The second link is a link to my favorite things which contains some of the things that I love and all that. I mean the title favorite things says it all!</p>
         <p>The third link is my hello world page. Basically it has demonstrations of the things that i've been learning through the week.</p>
         <h3>ABOUT ME SECTION</h3>
-        <p>I'm Duncan Lewis. I went to <em>St Peters Academy</em> Narok for my junior education. I passed my final exams at junior level and proceeded to Kakamega High School.
+        <p>I'm Duncan Lewis. I went to <em>St Peters Academy</em> Narok for my junior education. I passed my final exams at junior level and proceeded to <strong>Kakamega High School.</strong>
           I did my form 4 final examinations and passed and proceeded to pursue <em>Software engineering</em> at University Of Nairobi Chiromo campus.
           I decided to take software development to <strong>develop my skills and knowledge</strong> to get into the <strong>Tech world</strong> which is my passion.
           My current interests are in programming, photography and film production.</p>
+          </div>
           </div>
           </div>
           <div class="black">
