Add responsive design

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LANDING PORTFOLIO.</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+     <title>LANDING PORTFOLIO.</title>
+    <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body background="images/web.jpg">
     <div class="jumbotron">
@@ -21,7 +21,10 @@
         <li><a href="https://github.com/Ancel-Ajanga/hello-world">Hello World.</a></li>
         </ul>
         <p> Here is the live link to my page;</p>
-        <h2>Description of the project and language it uses.</h2>
+        <div class="card bg-primary text-white">
+          <div class="card-body>"
+        <h2 class="bg-success">Description of the project and language it uses.</h2>
+        </div>
         <p>The first link is a link to my first website which was created under Moringa School with the guide of tms.</p>
         <p>The second link is a link to my favorite things which contains some of the things that I love and all that. I mean the title favorite things says it all!</p>
         <p>The third link is my hello world page. Basically it has demonstrations of the things that i've been learning through the week.</p>
@@ -30,20 +33,23 @@
           I did my form 4 final examinations and passed and proceeded to pursue <em>Software engineering</em> at University Of Nairobi Chiromo campus.
           I decided to take software development to <strong>develop my skills and knowledge</strong> to get into the <strong>Tech world</strong> which is my passion.
           My current interests are in programming, photography and film production.</p>
-          </div>
-          </div>
+        </div>
+        </div>
           </div>
           <div class="black">
             <div class="My hobbies">
+              <div class="card">
+                <dic vlass="card-body">
           <p>My <strong>hobbies</strong> are;</p>
           <ol>
-            <li>travelling</li>
+            <li class="bg-danger">travelling</li>
             <li>swimming</li>
             <li>exploring</li>
-            <li>hiking</li>
+            <li class="bg-danger">hiking</li>
             <li>reading novels</li>
-            <li>watching movies.</li>
+            <li class="bg-danger">watching movies.</li>
             </ol>
+            </div>
             </div>
             </div>
 
