add cascading & divs styling

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -1,58 +1,137 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en"
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>LANDING PORTFOLIO.</title>
-    <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body background="images/web.jpg">
-    <div class="jumbotron">
-    <div class="about me">
-      <div class="photo">
-      <div class="dun">
-    <h1>Ancel Lewis Ajanga</h1>
-    <img src="images/eagle.jpg" alt="A photo of an eagle">
-    <p class="intro">This is a list of <strong>projects</strong> I've created;</p>
-      <ul>
-        <li><a href="https://github.com/Ancel-Ajanga/my-first-website">First Website.<a/>.</li>
-        <li><a href="https://github.com/Ancel-Ajanga/my-favorite-things">Favorite Things.</a>.</li>
-        <li><a href="https://github.com/Ancel-Ajanga/hello-world">Hello World.</a></li>
-        </ul>
-        <p> Here is the live link to my page;</p>
-        <div class="card bg-primary text-white">
-          <div class="card-body>"
-        <h2 class="bg-success">Description of the project and language it uses.</h2>
-        </div>
-        <p>The first link is a link to my first website which was created under Moringa School with the guide of tms.</p>
-        <p>The second link is a link to my favorite things which contains some of the things that I love and all that. I mean the title favorite things says it all!</p>
-        <p>The third link is my hello world page. Basically it has demonstrations of the things that i've been learning through the week.</p>
-        <h3>ABOUT ME SECTION</h3>
-        <p>I'm Duncan Lewis. I went to <em>St Peters Academy</em> Narok for my junior education. I passed my final exams at junior level and proceeded to <strong>Kakamega High School.</strong>
-          I did my form 4 final examinations and passed and proceeded to pursue <em>Software engineering</em> at University Of Nairobi Chiromo campus.
-          I decided to take software development to <strong>develop my skills and knowledge</strong> to get into the <strong>Tech world</strong> which is my passion.
-          My current interests are in programming, photography and film production.</p>
-        </div>
-        </div>
-          </div>
-          <div class="black">
-            <div class="My hobbies">
-              <div class="card">
-                <dic vlass="card-body">
-          <p>My <strong>hobbies</strong> are;</p>
-          <ol>
-            <li class="bg-danger">travelling</li>
-            <li>swimming</li>
-            <li>exploring</li>
-            <li class="bg-danger">hiking</li>
-            <li>reading novels</li>
-            <li class="bg-danger">watching movies.</li>
+    <title>AJANGA ANCEL</title>
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="css/styles.css" type="text/css">
+          <title>BOOKSHOP</title>
+   </head>
+   <body class="container"
+     <div class="header">
+       <nav class="navbar navbar-expand-ig navbar-dark bg-dark">
+         <a
+        <a class="navbar-brand"href="#">Ajanga Ancel</a>
+        <button class="navbar-toggler"type="button"data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+        are-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+            <li class="nav-item active">
+      <span class="sr-only"></span></a>
+    </li class="nav-item">
+      <a class="nav-link"
+      href="#class">Contact</a>
+    </li>
+  </ul>
+</div>
+</nav>
+<div class="container">
+    <div id="home"
+         My portfolio page</h2>
+         <img src="book.ipg" width=" 350" height="220"
+       </div>
+       <div class="container">
+                <div class="col-7">
+                    <p>List of web projects created at <strong><em>Moringa School:</em></strong></p>
+                    <ul>
+                        <li>My First webpage: a first HTML webpage... <a href="">My First webpage link</a> </li>
+                        <li>My Favourite things: a HTML webpage that describes my interests... <a href="">My Favourite things link</a></li>
+                        <li>Hello-World: a dummy HTMl webpage... <a href="">Hello-World link </a>
+                    </ul>
+                </div>
+            </div>
+            <div class=" jumbotron jumbotron-fluid ">
+               <div class="container ">
+                   <div id="About">
+                       <h1 class="display-3 ">About me</h1>
+                       <p class="lead ">
+                           <p>My name is <b>Ajanga Ancel Duke Lewis</b></p>
+                           <hr class="my-2 ">
+                           <p>I am a <span id="course ">undergraduate</span> student at <span class="School "> UON. </span>I decided to pursue <br> programming to gain knowledge and skills required to venture into computational biology.</p>
+                           <p>My interestst and hobbies include:</p>
+                       </p>
+                       <p class="lead ">
+                           <a class="btn btn-primary btn-lg " href="# " role="button ">Home</a>
+                       </p>
+                   </div>
+               </div>
+           </div>
+           <ol>
+             <li>Football</li>
+              <li>swimming</li>
+              <li>dancing</li>
+              <li>badminton</li>
+              <li>Photography</li>
             </ol>
+          </div>
+        </div>
+    <!-- Site footer -->
+    <footer class="site-footer ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-12 col-md-6 ">
+                    <h6>About</h6>
+                    <p class="text-justify ">My name is <i>Ajanga Ancel Lewis</i> ,I am a <span id="course ">computer science</span> student at <span class="School "> UON. </span>I decided to pursue <br> programming to gain knowledge and skills so as to market myself in the employment field.
+                    </p>
+                </div>
+                <div id="contacts">
+                    <div class="col-xs-6 col-md-3 ">
+                        <h6>Categories</h6>
+                        <ul class="footer-links ">
+                            <li><a href=" ">html</a></li>
+                            <li><a href=" ">UI Design</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-6 col-md-3 ">
+                        <h6>Quick Links</h6>
+                        <ul class="footer-links ">
+                            <li><a href=" ">About Me</a></li>
+                            <li><a href=" ">Contact Me</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <hr>
             </div>
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-8 col-sm-6 col-xs-12 ">
+                        <p class="copyright-text ">Copyright &copy; 2021 All Rights Reserved by
+                            <a href="# ">Ajanga Ancel</a>.
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12 ">
+                        <ul class="social-icons ">
+                            <li>
+                                <a class="facebook " href="# ">
+                                    <i class="fa fa-facebook ">
+                                    <span>Insta</span>
+                            </a>
+                        </li>
+                        <li>
+                          <a class="facebook " href=" ">
+                              <i class="fa fa-facebook ">
+                                  <span>Github</span>
+                          </a>
+                      </li>
+                      <li>
+                        <a class="facebook " href="# ">
+                            <i class="fa fa-facebook ">
+                                <span>Twitter</span>
+                        </a>
+                    </li>
+                    <li>
+                      <a class="facebook " href="">
+                          <i class="fa fa-facebook ">
+                              <span>Linkdin</span>
+                      </a>
+                  </li>
+                    </ul>
+                </div>
+                </div>
             </div>
-            </div>
-
-  </body>
-
+        </div>
+    </footer>
+</body>
 </html>
