add github links

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -36,9 +36,9 @@
                 <div class="col-7">
                     <p>List of web projects created at <strong><em>Moringa School:</em></strong></p>
                     <ul>
-                        <li>My First webpage: a first HTML webpage... <a href="">My First webpage link</a> </li>
-                        <li>My Favourite things: a HTML webpage that describes my interests... <a href="">My Favourite things link</a></li>
-                        <li>Hello-World: a dummy HTMl webpage... <a href="">Hello-World link </a>
+                        <li>My First webpage: a first HTML webpage... <a href="https://github.com/Ancel-Ajanga/my-first-website">My First webpage link</a> </li>
+                        <li>My Favourite things: a HTML webpage that describes my interests... <a href="https://github.com/Ancel-Ajanga/my-favorite-things">My Favourite things link</a></li>
+                        <li>Hello-World: a dummy HTMl webpage... <a href="https://github.com/Ancel-Ajanga/hello-world">Hello-World link </a>
                     </ul>
                 </div>
             </div>
