Add html tag changes

--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/styles.css" type="text/css">
-          <title>BOOKSHOP</title>
+          <title>ABOUT ME</title>
    </head>
    <body class="container"
      <div class="header">
@@ -23,6 +23,7 @@
     </li class="nav-item">
       <a class="nav-link"
       href="#class">Contact</a>
+      <img src="images/eagle.jpg" alt="A photo of an eagle" id="image1">
     </li>
   </ul>
 </div>
@@ -30,7 +31,7 @@
 <div class="container">
     <div id="home"
          My portfolio page</h2>
-         <img src="book.ipg" width=" 350" height="220"
+         <images src="book.jpg" width=" 350" height="220"
        </div>
        <div class="container">
                 <div class="col-7">
@@ -87,8 +88,8 @@
                     <div class="col-xs-6 col-md-3 ">
                         <h6>Quick Links</h6>
                         <ul class="footer-links ">
-                            <li><a href=" ">About Me</a></li>
-                            <li><a href=" ">Contact Me</a></li>
+                            <li><a href="https://l.instagram.com/?u=https%3A%2F%2Fduncanlewis546.wixsite.com%2Fleiis&e=ATPcD5HO6bYqg8ME4pOl1P6e6nHjSfLs8DrYJSlTUZTgJrMf3ccWQBqjsGtuOjyXl1RtRTBr4J5YQknNygs0Jw&s=1">About Me</a></li>
+                            <li><a href="https://l.instagram.com/?u=https%3A%2F%2Fduncanlewis546.wixsite.com%2Fleiis&e=ATPcD5HO6bYqg8ME4pOl1P6e6nHjSfLs8DrYJSlTUZTgJrMf3ccWQBqjsGtuOjyXl1RtRTBr4J5YQknNygs0Jw&s=1">Contact Me</a></li>
                         </ul>
                     </div>
                 </div>
@@ -110,7 +111,7 @@
                             </a>
                         </li>
                         <li>
-                          <a class="facebook " href=" ">
+                          <a class="facebook " href="https://github.com/">
                               <i class="fa fa-facebook ">
                                   <span>Github</span>
                           </a>
@@ -122,9 +123,22 @@
                         </a>
                     </li>
                     <li>
-                      <a class="facebook " href="">
+                      <a class="facebook " href="https://www.facebook.com/">
                           <i class="fa fa-facebook ">
                               <span>Linkdin</span>
+                              
+       <a href=""class="tabs">HOME</a>
+       <a href=""class="tabs">NEWS</a>
+       <a href=""class="tabs">About</a>
+       <a href=""class="tabs">STORE</a>
+   </nav>
+<div id="banner">
+</div>
+<h1 span id="height"> <ABOUT-ME</h1>
+  <h3>A GAME CHANGER FOR ALL STUDENTS </h3>
+  </span
+</div>
+
                       </a>
                   </li>
                     </ul>
