--- a/l.portfolio.html
+++ b/l.portfolio.html
@@ -46,7 +46,7 @@
             <div class=" jumbotron jumbotron-fluid ">
                <div class="container ">
                    <div id="About">
-                       <h1 class="display-3 ">About me</h1>
+                       <h1 class="display-3 ">h1>ABOUT ME</h1>
                        <p class="lead ">
                            <p>My name is <b>Ajanga Ancel Duke Lewis</b></p>
                            <hr class="my-2 ">
